--- a/MedPlus/appsettings.json
+++ b/MedPlus/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "mysqlConnection": "server=localhost;uid=root;pwd=abcdk100;database=dbthree"
+    "mysqlConnection": "server=localhost;uid=;pwd=;database="
   },
   "Logging": {
     "LogLevel": {
